# accreditation_mapper_group_12_capstone_project

./: .gitignore  A.css  E_html.py  E_with_navi.py  README.md  build.py  config.json  createLatexTemplate.py  criterion.css  criterionA_report.html  criterionAtoFTable.aux  criterionAtoFTable.fdb_latexmk  criterionAtoFTable.fls  criterionAtoFTable.tex  output_criterion_D.html  output_program_details.html  pyproject.toml  requirements.txt  requirementsPoetry.txt
ClientInput/: CSSE-allprograms-outcome-mappings-20240911.xlsx  CSSE-allprograms-outcome-mappings-20240913.xlsx  README.md
Examples/: KnowledgeBase_example.py  SFIAReader.py
ExcelGenerator/: excelgenerator.py
HTMLGenerator/: BHtml.py  SFIAReader.py  knowledgebase.py  readme.md
HTMLGenerator/combine/: AHtml.py  BHtml.py  CHtml.py  DHtml.py  EHtml.py  app.py  run.sh  (+5 more)
KnowledgeBase/: CSSE-allprograms-outcome-mappings-20240821.xlsx  CSSE-allprograms-outcome-mappings-20240913.xlsx  CSSE-allprograms-outcome-mappings-20241001.xlsx  CSSE-allprograms-outcome-mappings-20241007.xlsx  ForC.html  KnowledgeBase.py  SFIAReader.py  caidi.py  generate_A_html.py  generate_C_html.py  generate_D_html.py  generate_html.py  knowledgebase.py  knowledgebase_example.py  sfia.py  sfia_v8_custom.xlsx  sfiaskills.6.3.en.1.xlsx
LatexGenerator/: createLatexTemplate.py  latexStyleSheet.sty  readme.md  requirements.txt
Prototypes/: README.md
clockify/: timesheet
combine/: BHtml.py  DHtml.py  EHtml.py  app.py  knowledgebase.py  knowledgebase_example_D.py  ~$CSSE-allprograms-outcome-mappings-20240821.xlsx
deliverable/: htmlPage
(+26 files in other folders)
