[tool.poetry]
name = "accreditation-mapper-group-12-capstone-project"
version = "0.1.0"
description = "build file for accrediation mapper"
authors = ["Group 12 - MIT Capstone Course UWA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyLaTeX = "^1.4.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
